stylized special events webpage

--- a/eRestaurant sample/Website/Web.config
+++ b/eRestaurant sample/Website/Web.config
@@ -10,6 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Website-8fc913b2-a6da-4970-bf9d-d934c9031af9;AttachDbFilename=|DataDirectory|\aspnet-Website-8fc913b2-a6da-4970-bf9d-d934c9031af9.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+
+    <add name="EatIn" connectionString="Data Source=.;Initial Catalog=eRestaurant;Integrated Security=true;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
