--- a/eRestaurant sample/eRestaurant/eRestaurant.csproj
+++ b/eRestaurant sample/eRestaurant/eRestaurant.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="BLL\DataObject.cs" />
     <Compile Include="BLL\MenuController.cs" />
+    <Compile Include="BLL\ReportsController.cs" />
     <Compile Include="BLL\ReservationController.cs" />
     <Compile Include="BLL\RestaurantAdminController.cs" />
     <Compile Include="DAL\RestaurantContext.cs" />
@@ -59,6 +60,7 @@
     <Compile Include="Entities\DTOs\OrderItem.cs" />
     <Compile Include="Entities\Item.cs" />
     <Compile Include="Entities\MenuCategories.cs" />
+    <Compile Include="Entities\POCO%27s\CategoryMenuItem.cs" />
     <Compile Include="Entities\Reservation.cs" />
     <Compile Include="Entities\SpecialEvent.cs" />
     <Compile Include="Entities\Table.cs" />
