--- a/eRestaurant sample/eRestaurant/eRestaurant.csproj
+++ b/eRestaurant sample/eRestaurant/eRestaurant.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLL\AdHocController.cs" />
+    <Compile Include="BLL\BusinessRuleException.cs" />
     <Compile Include="BLL\DataObject.cs" />
     <Compile Include="BLL\MenuController.cs" />
     <Compile Include="BLL\ReportsController.cs" />
